@@ -22,6 +22,7 @@
 
 using namespace std;
 using namespace rnumber;
+using namespace rnumber_t;
 
 // We always install a default random object.
 unsigned Random::_currentGen = 0;
@@ -92,12 +93,28 @@ unsigned RandomObj::getInteger()
   return _rand.genrand();
 }
 
+uint64 RandomObj::getUint64()
+{
+  if ( _gated ) 
+    throw runtime_error ( " RandomObj::getUint64 - Random number was generated while generator was gated." );
+  uint64 x = _rand.genrand();
+  x <<= 32;
+  return (x | _rand.genrand());
+}
+
 // Get a random unsigned integer from 0 to n
 unsigned RandomObj::getInteger( unsigned n )
 {
   if ( _gated ) 
     throw runtime_error ( "RandomObj::getInteger( unsigned n ) - Random number was generated while generator was gated." );
   return (!n) ? getInteger() : _rand.genrand() % n;
+}
+
+uint64 RandomObj::getUint64( uint64 n )
+{
+  if ( _gated ) 
+    throw runtime_error ( "RandomObj::getUint64( uint64 n ) - Random number was generated while generator was gated." );
+  return (!n) ? getUint64() : getUint64() % n;
 }
 
 // Get a double between 0 and 1
