@@ -1,3 +1,7 @@
+2003-10-27  Brian Kahne  <bkahne@ibmoto.com>
+
+	* Added methods to Random to get uint64 values.
+
         ====== rnumber release 1.20.4 (v1_20_4) on Linux (cde-tx32-lc004) ======
 
         ========= rnumber release 1.20.4 (v1_20_4) on Linux (petra20) =========
